# interlock

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  context7.json  data.json  pyproject.toml  zensical.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: comparison.md  demo.md  getting-started.md  index.md  llms-full.txt  llms.txt  reference.md
docs/guides/: configuration.md  failure-classification.md  observability.md  pipeline.md  retries.md  states.md  timeout.md
docs/integrations/: aiohttp.md  fastapi.md  frameworks.md  httpx2.md  index.md  litestar.md  llm.md  redis.md  requests.md  tenacity.md
examples/: README.md  lifecycle.py  pipeline.py  two_clients.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_9a8197455032cc7a_aiohttp_py.html  z_9a8197455032cc7a_fastapi_py.html  z_9a8197455032cc7a_httpx2_py.html  z_9a8197455032cc7a_litestar_py.html  z_9a8197455032cc7a_otel_py.html  z_9a8197455032cc7a_redis_py.html  z_9a8197455032cc7a_requests_py.html  z_9a8197455032cc7a_tenacity_py.html  z_af8731c3e1a8a1d1___init___py.html  z_af8731c3e1a8a1d1__classify_py.html  z_af8731c3e1a8a1d1__clock_py.html  z_af8731c3e1a8a1d1__coordination_py.html  z_af8731c3e1a8a1d1__detect_py.html  z_af8731c3e1a8a1d1__engine_py.html  z_af8731c3e1a8a1d1__state_machine_py.html  z_af8731c3e1a8a1d1__typing_py.html  z_af8731c3e1a8a1d1__windows_py.html  z_af8731c3e1a8a1d1_breaker_py.html  z_af8731c3e1a8a1d1_config_py.html  z_af8731c3e1a8a1d1_errors_py.html  z_af8731c3e1a8a1d1_fastapi_py.html  z_af8731c3e1a8a1d1_httpx2_py.html  z_af8731c3e1a8a1d1_listeners_py.html  z_af8731c3e1a8a1d1_otel_py.html  z_af8731c3e1a8a1d1_outcome_py.html  z_af8731c3e1a8a1d1_pipeline_py.html  z_af8731c3e1a8a1d1_protocols_py.html  z_af8731c3e1a8a1d1_redis_py.html  z_af8731c3e1a8a1d1_registry_py.html  z_af8731c3e1a8a1d1_shared_py.html  z_af8731c3e1a8a1d1_state_py.html  z_af8731c3e1a8a1d1_timeout_py.html  z_af8731c3e1a8a1d1_version_py.html  z_af8731c3e1a8a1d1_window_py.html
interlock/: __init__.py  _classify.py  _clock.py  _coordination.py  _detect.py  _engine.py  _state_machine.py  _typing.py  _windows.py  breaker.py  config.py  errors.py  fastapi.py  httpx2.py  listeners.py  otel.py  outcome.py  pipeline.py  protocols.py  redis.py  registry.py  shared.py  state.py  timeout.py  version.py  window.py
interlock/integrations/: __init__.py  aiohttp.py  fastapi.py  httpx2.py  litestar.py  otel.py  redis.py  requests.py  tenacity.py
overrides/: main.html
scripts/: build_llms_full.py
tests/: conftest.py  inmemory_storage.py  test_aiohttp.py  test_auto_transition.py  test_breaker.py  test_clock.py  test_config.py  test_coordination.py  test_detect.py  test_e2e.py  test_engine.py  test_errors.py  test_examples.py  test_fastapi.py  test_httpx2.py  test_httpx2_e2e.py  test_listeners.py  test_litestar.py  test_observability.py  test_otel.py  test_outcome.py  test_pipeline.py  test_protocols.py  test_redis_storage.py  test_registry.py  test_requests.py  test_shared.py  test_state.py  test_state_machine.py  test_state_machine_properties.py  test_storage_contract.py  test_tenacity.py  test_timeout.py  test_typing.py  test_version.py  test_window.py  test_windows.py  typing_surface.py
